# ECOv003-L3T-L4T-JET

./: .gitignore copy  Dockerfile  ECOv003_L3T_L4T_JET.py  README copy.md  README.md  example_L3T_L4T_JET_run.py  example_L3T_L4T_JET_run_with_download.py  makefile  pyproject.toml
ECOv003_L3T_L4T_JET/: ECOv002-cal-val-JET-inputs.csv  ECOv002-cal-val-JET-outputs.csv  ECOv002_calval_JET_outputs.py  ECOv003_L3T_L4T_JET.py  JET.py  L3TL4TJETConfig.py  PGE.py  Ta_C_error_OLS.py  air_temperature_uncertainty.py  check_distribution.py  constants.py  exceptions.py  generate_L3T_L4T_JET_runconfig.py  process_JET_table.py  read_ECOv003_configuration.py  read_ECOv003_inputs.py  sharpen_meteorology_data.py  sharpen_soil_moisture_data.py
ECOv003_L3T_L4T_JET/MOD16/: MOD16.py
ECOv003_L3T_L4T_JET/uncertainty_models/: model_metadata.json  quantile_0.05_model.pkl  quantile_0.25_model.pkl  quantile_0.50_model.pkl  quantile_0.75_model.pkl  quantile_0.95_model.pkl
ECOv003_L3T_L4T_JET/verma_net_radiation/: verma_net_radiation.py
documentation/: ECOv003_L3_JET_ATBD.md  ECOv003_L3_JET_ATBD.sh  ECOv003_L3_JET_ATBD_V1_20240813.md  ECOv003_L3_L4_Ecosystem_Data_Products_User_Guide.md  ECOv003_L3_L4_Ecosystem_Data_Products_User_Guide.sh  ECOv003_L3_L4_JET_ATBD.md  ECOv003_L3_L4_JET_ATBD.sh  ECOv003_L3_L4_JET_User_Guide.md  ECOv003_L3_L4_JET_User_Guide.sh  pandoc_table_header.tex
documentation/ECOv003_L3_JET_ATBD_V1_20240813/media/: image3.wmf  image5.emf
examples/: example_L3T_L4T_JET_run_with_download.py
notebooks/: Air Temperature UQ OLS.ipynb  Air Temperature UQ.ipynb  BESS-JPL Accuracy with ECOv002 Cal-Val copy.ipynb  Compare BESS Outputs.ipynb  ECOSTRESS Granule Download.ipynb  ECOv003 JET Accuracy with ECOv002 Cal-Val Verma vs BESS Rn.ipynb  ECOv003 JET Accuracy with ECOv002 Cal-Val.ipynb  Input Dataset.ipynb  JET Accuracy with ECOv002 Cal-Val.ipynb  JET BESS Accuracy Comparison.ipynb  JET Sensitivity with ECOv002 Cal-Val.ipynb
tests/: conftest.py  test_import_dependencies.py
