[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ECOv003-L3T-L4T-JET"
version = "1.0.0"
description = "ECOSTRESS Collection 3 JPL Evapotranspiration (JET) Product Generating Executable (PGE)"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "affine",
    "astropy",
    "breathing-earth-system-simulator>=1.4.3",
    "colored_logging",
    "ECOv002-CMR>=1.0.5",
    "ECOv002-granules>=1.0.3",
    "ECOv003-granules",
    "FLiESANN>=1.4.1",
    "FLiESLUT>=1.0.2",
    "gedi-canopy-height",
    "geopandas",
    "GEOS5FP>=1.1.1",
    "h5py",
    "koppengeiger>=1.0.4",
    "matplotlib",
    "MCD12C1-2019-v006",
    "MOD16-JPL>=1.1.0",
    "modisci>=1.1.2",
    "msgpack",
    "msgpack_numpy",
    "netCDF4",
    "numpy",
    "pandas",
    "pillow",
    "pycksum",
    "pykdtree",
    "pyproj",
    "pyresample",
    "PTJPLSM",
    "rasterio",
    "rasters>=1.4.6",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "sentinel-tiles>=1.0.2",
    "shapely",
    "six",
    "soil-capacity-wilting",
    "solar-apparent-time>=1.3.1",
    "STIC>=1.0.3",
    "sun-angles",
    "tensorflow",
    "untangle",
    "xmltodict"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[tool.setuptools.package-data]
ECOv002_L3T_L4T_JET = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/ECOSTRESS-Collection-2/ECOv003-L3T-L4T-JET"

[tool.setuptools.packages.find]
include = ["ECOv003_L3T_L4T_JET"]
exclude = []
