[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ECOv003-L3T-L4T-JET"
version = "1.0.0"
description = "ECOSTRESS Collection 3 JPL Evapotranspiration (JET) Product Generating Executable (PGE)"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "affine",
    "astropy",
    "BESS-JPL>=1.7.0",
    "colored-logging",
    "ECOv002-CMR>=1.0.5",
    "ECOv002-granules>=1.0.3",
    "ECOv003-granules",
    "FLiESANN>=1.4.1",
    "FLiESLUT>=1.0.2",
    "gedi-canopy-height>=1.1.1",
    "geopandas",
    "GEOS5FP>=1.1.1",
    "h5py",
    "koppengeiger>=1.0.4",
    "matplotlib",
    "MCD12C1-2019-v006",
    "MODISCI>=1.3.0",
    "msgpack",
    "msgpack_numpy",
    "NASADEM",
    "netCDF4",
    "numpy",
    "pandas",
    "pillow",
    "pycksum",
    "pykdtree",
    "pyproj",
    "pyresample",
    "PM-JPL>=1.2.2",
    "PTJPL>=1.0.8",
    "PTJPLSM>=1.1.0",
    "rasterio",
    "rasters>=1.4.6",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "sentinel-tiles>=1.0.2",
    "shapely",
    "six",
    "soil-capacity-wilting>=1.1.0",
    "solar-apparent-time>=1.3.1",
    "STIC-JPL>=1.1.0",
    "sun-angles",
    "tensorflow",
    "untangle",
    "verma-net-radiation",
    "xmltodict"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[tool.setuptools.package-data]
ECOv002_L3T_L4T_JET = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/ECOSTRESS-Collection-2/ECOv003-L3T-L4T-JET"

[tool.setuptools.packages.find]
include = ["ECOv003_L3T_L4T_JET"]
exclude = []
