[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ECOv003-L3T-L4T-JET"
version = "1.15.0"
description = "ECOSTRESS Collection 3 JPL Evapotranspiration (JET) Product Generating Executable (PGE)"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "AquaSEBS",
    "BESS-JPL>=1.28.0",
    "check-distribution",
    "colored-logging",
    "ECOv002-calval-tables",
    "ECOv002-granules",
    "ECOv003-exit-codes",
    "ECOv003-granules",
    "FLiESANN",
    "GEOS5FP",
    "koppengeiger",
    "monte-carlo-sensitivity",
    "numpy",
    "pandas",
    "PM-JPL",
    "PTJPLSM",
    "python-dateutil",
    "pytictoc",
    "rasters",
    "rasterio",
    "scikit-learn",
    "solar-apparent-time",
    "STIC-JPL",
    "sun-angles",
    "untangle",
    "verma-net-radiation"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[tool.setuptools.package-data]
ECOv003_L3T_L4T_JET = ["*.xml"]

[project.urls]
"Homepage" = "https://github.com/ECOSTRESS-Collection-2/ECOv003-L3T-L4T-JET"

[tool.setuptools.packages.find]
exclude = ["notebooks*", "examples*", "debugging*", "performance*"]

[project.scripts]
ECOv003-L3T-L4T-JET = "ECOv003_L3T_L4T_JET.ECOv003_L3T_L4T_JET:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:numpy.ndarray size changed:RuntimeWarning",
    "ignore:The 'shapely.geos' module is deprecated:DeprecationWarning",
    # Suppress warnings from external daylight_evapotranspiration library
    "ignore:invalid value encountered in divide:RuntimeWarning:daylight_evapotranspiration"
]
